# project-navis

./: CMakeLists.txt
common/: camera.cpp  camera.h  config.h  core.cpp  core.h  entity.cpp  entity.h  inputmanager.cpp  inputmanager.h  navisconfig.h  renderer.cpp  renderer.h  resourcemanager.cpp  resourcemanager.h  scene.cpp  scene.h  sprite.cpp  sprite.h  timer.cpp  timer.h
start/: bordertile.cpp  bordertile.h  car.cpp  car.h  gamescene.cpp  gamescene.h  grasstile.cpp  grasstile.h  main.cpp  player.cpp  player.h  roadtile.cpp  roadtile.h  tile.cpp  tile.h  watertile.cpp  watertile.h
start/assets/: bordertile.tga  grasstile.tga  player.tga  roadtile.tga  tile.tga  watertile.tga
